helloworld.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-second-nodeport
  labels:
    app: hello-kubernetes-second
    type: nodeport
spec:
  type: NodePort
  selector:
    app: hello-kubernetes-second
  ports:
    - protocol: TCP
      port: 80 #service port
      targetPort: 8080 #container port
      nodePort: 31000 #open port
      name: hello-kubernetes-second-nodeport
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-second
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: hello-kubernetes-second
  selector:
    app: hello-kubernetes-second
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-second
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes-second
  template:
    metadata:
      labels:
        app: hello-kubernetes-second
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
