ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - hosts:
        - graph.syamsul.online
        - url.syamsul.online
        - api.syamsul.online
        - chat.syamsul.online
      secretName: hello-kubernetes-tls
  rules:
    - host: url.syamsul.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: url-ui-clusterip
                port:
                  number: 80
    - host: graph.syamsul.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: graph-ui-clusterip
                port:
                  number: 80
    - host: chat.syamsul.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: chat-ui-clusterip
                port:
                  number: 80
    - host: api.syamsul.online
      http:
        paths:
          - pathType: Prefix
            path: "/url"
            backend:
              service:
                name: url-http-clusterip
                port:
                  number: 5000
          - pathType: Prefix
            path: "/chat/ws"
            backend:
              service:
                name: chat-server-clusterip
                port:
                  number: 8080
          - pathType: Prefix
            path: "/jaeger"
            backend:
              service:
                name: jaeger-clusterip
                port:
                  number: 16686
          - pathType: Prefix
            path: "/prometheus"
            backend:
              service:
                name: prometheus-clusterip
                port:
                  number: 9090
          - pathType: Prefix
            path: "/graph"
            backend:
              service:
                name: graph-http-clusterip
                port:
                  number: 7000
        # - pathType: Prefix
        #   path: "/url"
        #   backend:
        #     service:
        #       name: url-ui-clusterip
        #       port:
        #         number: 80
        # - pathType: Prefix
        #   path: "/postgres"
        #   backend:
        #     service:
        #       name: postgres-clusterip
        #       port:
        #         number: 5432
